// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeThemes can merge 2 themes 1`] = `
Object {
  "stylesheets": Array [],
  "tokens": Object {
    "body": Object {
      "divider": "#eee",
      "fill": "red",
      "link": Object {
        "default": "blue",
      },
      "subText": "#333",
      "text": "white",
    },
  },
}
`;

exports[`mergeThemes fills in blanks 1`] = `
Object {
  "stylesheets": Array [],
  "tokens": Object {
    "body": Object {
      "divider": "#eee",
      "fill": "white",
      "link": Object {
        "default": "blue",
      },
      "subText": "#333",
      "text": "black",
    },
  },
}
`;
